--- a/main.css
+++ b/main.css
@@ -55,6 +55,7 @@ main {
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
+  min-width: 370px;
 }
 img {
   width: 60px;
@@ -77,7 +78,6 @@ img {
 }
 .text p.place {
   color: hsl(75, 94%, 57%);
-  width: 250px;
   margin-bottom: 15px;
   font-size: 13px;
   text-transform: capitalize;
