--- a/main.css
+++ b/main.css
@@ -56,6 +56,7 @@ main {
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
   min-width: 370px;
+  min-height: 500px;
 }
 img {
   width: 60px;
@@ -89,18 +90,20 @@ img {
 }
 .social .container main ul li {
   background-color: hsl(0, 0%, 20%);
-  margin-bottom: 10px;
   border-radius: 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
-  padding: 10px;
+  padding: 15px;
   transition: 0.3s;
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
   -ms-transition: 0.3s;
   -o-transition: 0.3s;
+}
+.social .container main ul li:not(:last-child) {
+  margin-bottom: 15px;
 }
 .social .container main ul li:hover {
   background-color: hsl(75, 94%, 57%);
